--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       </div>
     </div>
     <div class="video-grid">
-      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE3nO5rdGzkjKDNFCH76lQDA" class="frame-video"></iframe>
-      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsqRcABtOyM9xf5ro3RT23Jq1yyu9UGiKBA" class="frame-video"></iframe>
-      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE_Sg5fvWFxJJDNFCH76lQDA" class="frame-video"></iframe> 
+      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE3nO5rdGzkjKDNFCH76lQDA." class="frame-video"></iframe>
+      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsqRcABtOyM9xf5ro3RT23Jq1yyu9UGiKBA." class="frame-video"></iframe>
+      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE_Sg5fvWFxJJDNFCH76lQDA." class="frame-video"></iframe> 
     </div>
     <div class="logo-container">
       <div>
@@ -57,9 +57,9 @@
       </div>
     </div>
       <div class="video-grid">
-        <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDspzdy0B4HJHQAs7jbY9p4iCDNFCH76lQDA" class="frame-video"></iframe>
-        <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsoau10wX7kFREhZuAvr73_yDNFCH76lQDA" class="frame-video"></iframe>
-        <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsqdqC8aXdJqEj2oujRyepuFDNFCH76lQDA" class="frame-video"></iframe> 
+        <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDspzdy0B4HJHQAs7jbY9p4iCDNFCH76lQDA." class="frame-video"></iframe>
+        <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsoau10wX7kFREhZuAvr73_yDNFCH76lQDA." class="frame-video"></iframe>
+        <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsqdqC8aXdJqEj2oujRyepuFDNFCH76lQDA." class="frame-video"></iframe> 
       </div>
     </div>
   </div>
