--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="video-grid">
-      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE3nO5rdGzkjKDNFCH76lQDA." class="frame-video"></iframe>
+      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="#"</iframe>
       <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsqRcABtOyM9xf5ro3RT23Jq1yyu9UGiKBA." class="frame-video"></iframe>
       <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE_Sg5fvWFxJJDNFCH76lQDA." class="frame-video"></iframe> 
     </div>
