--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <div class="banner"> 
       <h2 class="h2-1"> SharePoint sites</h2>
       <div class="cards-container">
-        <a class="card-white" href="#" target="_blank">
+        <a class="card-white" href="https://enghouse.sharepoint.com/sites/MomindumMarketing/SitePages/Home.aspx?siteid={8589A6C3-176A-45A8-BA82-A7432184520E}&webid={4B8A8902-07EA-4525-AB5B-34972E2F16E2}&uniqueid={38473C19-71F1-405D-AEFB-60214AC8CC08}" target="_blank">
           <img src="images/momindum-aec-logo-color.png" alt="Momindum" class="card-white-img">
           <h3>Momindum Sales & Marketing</h3>
           <img src="images/SharePoint colors.png" alt="SharePoint" class="SP-logo">
         </a>
-        <a class="card-white" href="#" target="_blank">
+        <a class="card-white" href="https://enghouse.sharepoint.com/sites/EnghouseUCLaunch?OR=Teams-HL&CT=1662536154312&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiIyNy8yMjA3MzEwMTAwNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ%3D%3D" target="_blank">
           <img src="images/EnghouseConnect_col.png" alt="Enghouse UC" class="card-white-img">
           <h3>Enghouse Connect Sales & Marketing</h3>
           <img src="images/SharePoint colors.png" alt="SharePoint" class="SP-logo">
         </a>
-        <a class="card-white" href="#"target="_blank">
+        <a class="card-white" href="https://enghouse.sharepoint.com/sites/NAVidyoSales/SitePages/LearningTeamHome.aspx?OR=Teams-HL&CT=1662536142755&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiIyNy8yMjA3MzEwMTAwNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ=="target="_blank">
           <img src="images/Vidyo_Enghouse-Corporate-Logo_linear_COLOUR.png" alt="Vidyo" class="card-white-img">
           <h3>Vidyo Sales Team</h3>
           <img src="images/SharePoint colors.png" alt="SharePoint" class="SP-logo">
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="video-grid">
-      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsoau10wX7kFRMlDZH79sHUcDNFCH76lQDA"</iframe>
+      <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE3nO5rdGzkjKDNFCH76lQDA." class="frame-video"></iframe>
       <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsqRcABtOyM9xf5ro3RT23Jq1yyu9UGiKBA." class="frame-video"></iframe>
       <iframe webkitallowfullscreen mozallowfullscreen allowfullscreen msallowfullscreen allow="autoplay; fullscreen" src="https://api.momindum.com/watch/uD3ia9PaDsobBEHdvm0cE_Sg5fvWFxJJDNFCH76lQDA." class="frame-video"></iframe> 
     </div>
@@ -71,7 +71,7 @@
     <div class="sessions-block">
       <img src="images/GSEA WHITE 2.png" alt="GSEA" class="GSEA-logo">
       <div class="GSEA-container">
-        <a class="card-white-GSEA" href="#" target="_blank">
+        <a class="card-white-GSEA" href="https://enghouse.sharepoint.com/sites/WWEnghouseSystemsProductInformation/_layouts/15/Event.aspx?ListGuid=8f7b24d1-4237-4a65-8aad-4f0e459ac92a&ItemId=30" target="_blank">
           <p class="month-day">March 17</p>
           <p class="session-name">GSEA Vidyo Roadmap Session</p>
         </a>
